# sshu

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirement.txt
.github/workflow/: dev-pipeline.yaml
.github/workflows/: ci-cd.yaml  dev-build-binaries.yaml  dev-build-pip.yaml  dev-pipeline.yaml
install/: sshu-installer.sh  sshu_installer.ps1  sshu_installer.sh
src/sshu/: cli.py
src/sshu/conn/: config_utils.py  manager.py  remote_utils.py
src/sshu/keys/: manager.py
sshu/: cli.py  main.py
sshu/conn/: config_utils.py  manager.py  remote_utils.py
tests/: conftest.py  test_cli.py  test_config_utils.py  test_initialize.py  test_initialize_ssh_config.py  test_manager.py  test_version_output.py
