[tool.poetry]
name = "sshu"
version = "0.1.3-beta1"  
description = "An ssh utility tool to manage ssh connections and keys"
authors = ["Hein Htet Zaw <h3inhtetzaw346@gmail.com>"]
packages = [{include = "sshu", from = "src"}]

[tool.poetry.scripts]
sshu = "sshu.cli:app"

[tool.poetry.dependencies]
python = ">=3.12"
typer = ">=0.16.0,<0.17.0"
fabric = ">=3.2.2,<4.0.0"
appdirs = ">=1.4.4,<2.0.0"
pyyaml = ">=6.0.3,<6.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[project]
name = "sshu"
version = "0.1.3-beta1"
authors = [
  { name="Hein Htet Zaw", email="h3inhtetzaw346@gmail.com" },
]
description = "ssh utility to manage ssh connections"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/FuReAsu/sshu"
Issues = "https://github.com/FuReAsu/sshu/issues"
